inputをtextareaに変更した

--- a/portfolio/templates/portfolio/engineer_work_detail.html
+++ b/portfolio/templates/portfolio/engineer_work_detail.html
@@ -120,7 +120,7 @@
         <div class="console_text">Name</div>
         <form>
           <div class="console_text_input">
-            <input class="form-control" id="comment_name" placeholder="ニックネームを入力">
+            <textarea class="form-control" id="comment_name" placeholder="ニックネームを入力" rows="1"></textarea>
           </div>
         </form>
 
