--- a/portfolio/templates/portfolio/engineer_work_detail.html
+++ b/portfolio/templates/portfolio/engineer_work_detail.html
@@ -115,7 +115,9 @@
   <section class="container">  <!--Comment-->
     <div class="section_title" id="comment_title"></div>
     <div class="console_area">
-      <div class="console_top">Comment to {{ engineer_product.engineer_product_alphabet_name }} process <span class="loading dots2"></span></div>
+      <div class="console_top">
+        Comment to {{ engineer_product.engineer_product_alphabet_name }} process <span class="loading dots2"></span>
+      </div>
       <div class="console">
         <div class="console_text">Name</div>
         <form>
@@ -126,7 +128,9 @@
 
         <div class="console_text">Comment</div>
         <form>
-          <div class="console_text_input"><textarea class="form-control" id="Comment_textarea" placeholder= "コメントを入力" rows="3"></textarea></div>
+          <div class="console_text_input">
+            <textarea class="form-control" id="Comment_textarea" placeholder= "コメントを入力" rows="3"></textarea>
+          </div>
         </form>
 
         <div class="console_text_link">
@@ -137,7 +141,6 @@
              </div>
           </a>
         </div>
-
       </div>
     </div>
   </section>
