--- a/portfolio/templates/portfolio/engineer_work_detail.html
+++ b/portfolio/templates/portfolio/engineer_work_detail.html
@@ -144,7 +144,7 @@
         </form>
 
         <div class="console_text_link">
-          <a class="link" href="{% url 'portfolio:index' %}#1">
+          <a class="link" href="#">
             <div class="box">
               <div class="link_name">Submit</div>
               <div class="bd10 bd"><div class="bdT"></div><div class="bdB"></div><div class="bdR"></div><div class="bdL"></div></div>
