--- a/portfolio/templates/portfolio/engineer_work_detail.html
+++ b/portfolio/templates/portfolio/engineer_work_detail.html
@@ -130,21 +130,21 @@
       </div>
       <div class="console">
         <div class="console_text">Name</div>
-        <form>
+        <form name="comment_form" method="post" action="{% url 'portfolio:get_comment' %}">
           <div class="console_text_input">
-            <textarea class="form-control" id="comment_name" placeholder="ニックネームを入力" rows="1"></textarea>
+            {% csrf_token %}
+            {{ form.name }}
           </div>
-        </form>
 
         <div class="console_text">Comment</div>
-        <form>
           <div class="console_text_input">
-            <textarea class="form-control" id="Comment_textarea" placeholder= "コメントを入力" rows="3"></textarea>
+            {% csrf_token %}
+            {{ form.comment_text }}
           </div>
         </form>
 
         <div class="console_text_link">
-          <a class="link" href="#">
+          <a class="link" href="javascript:void(0);" onclick="CommentSubmit()">
             <div class="box">
               <div class="link_name">Submit</div>
               <div class="bd10 bd"><div class="bdT"></div><div class="bdB"></div><div class="bdR"></div><div class="bdL"></div></div>
@@ -155,7 +155,7 @@
     </div>
   </section>
 
-  <section class="container">  <!--CommentView-->
+  <section class="container" id="3">  <!--CommentView-->
     <div class="section_title" id="comment_view_title"></div>
     <div class="console_area">
       <div class="console_top">Show comments to {{ engineer_product.engineer_product_alphabet_name }} process <span class="loading dots2"></span></div>
