--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -396,6 +396,7 @@ div.console_text_comment {
   position: relative;
   padding-left: 1em;
   border-bottom: 1px solid #333;
+  padding-bottom: 1em;
 }
 
 div.console_text_comment:before {
@@ -403,6 +404,12 @@ div.console_text_comment:before {
   top: 0;
   left: 0;
   content: "$ ";
+}
+
+.console_text_comment_name {
+  padding: 1em 0vmin;
+  color: #999;
+  font-size: 2vmin;
 }
 
 .console_text_link {
