--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -356,6 +356,20 @@ figure:hover figcaption {
   content: "$ ";
 }
 
+.console_center_message {
+  display: inline-block;
+  width: 100%;
+  height: auto;
+  margin: 3rem 0rem;
+  padding-left: 10px;
+  text-align: center;
+  font-size: 5vmin;
+}
+
+.console_center_message:before {
+  content: "$ ";
+}
+
 .console {
   padding: 10px;
 }
