--- a/portfolio/templates/portfolio/engineer_work_detail.html
+++ b/portfolio/templates/portfolio/engineer_work_detail.html
@@ -130,7 +130,7 @@
       </div>
       <div class="console">
         <div class="console_text">Name</div>
-        <form name="comment_form" method="post" action="{% url 'portfolio:get_comment' %}">
+        <form name="comment_form" method="post" action="{% url 'portfolio:get_comment' %}" onsubmit="click_submit()">
           <div class="console_text_input">
             {% csrf_token %}
             {{ form.name }}
@@ -145,13 +145,15 @@
           {% csrf_token %}
           <input type="hidden" name="id" value="{{ engineer_product.pk }}">
 
-          <div class="console_text_link">
+          <div class="console_text_link" id="submit_btn">
             <div class="box">
               <div class="bd10 bd"><div class="bdT"></div><div class="bdB"></div><div class="bdR"></div><div class="bdL"></div></div>
               <input type="submit" class="submit" value="Submit">
             </div>
           </div>
         </form>
+
+        <div id="submitting_message_area"></div>
       </div>
     </div>
   </section>
