submit後のコードを整理

--- a/portfolio/templates/portfolio/thanks.html
+++ b/portfolio/templates/portfolio/thanks.html
@@ -24,7 +24,7 @@
 
 </head>
 <body>
-  <section class="cover">  <!--カバーページ-->
+  <section class="cover">
     <div class="title_area">
       <div class="thanks_title" id="thanks_title"></div>
     </div>
@@ -32,7 +32,7 @@
     <div class="link_cover">
       <a class="link_cover_normal" href="{% url 'portfolio:index' %}#1">
         <div class="box">
-          Top
+          Back
           <div class="bd10 bd">
             <div class="bdT"></div>
             <div class="bdB"></div>
