--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -465,6 +465,12 @@ div.console_text_comment:before {
   opacity: .5;
 }
 
+.error_message {
+  color: #0F0;
+  font-size: 2.5vmin;
+}
+
+
 /************************************************************
                           @media
 ************************************************************/
