--- a/portfolio/templates/404.html
+++ b/portfolio/templates/404.html
@@ -8,15 +8,13 @@
     jQuery(function($) {
       $('#title').typist({
         speed: speed_define,
-        text: 'Error 404'
+        text: 'Error Code 404',
+        cursor: false
       });
       $('#sub_title_error1').typist({
         speed: speed_define,
-        text: 'アクセスしたページは'
-      });
-      $('#sub_title_error2').typist({
-        speed: speed_define,
-        text: '見つかりませんでした'
+        text: 'ページが見つかりませんでした',
+        cursor: false
       });
     });
     </script>
