--- a/portfolio/templates/500.html
+++ b/portfolio/templates/500.html
@@ -8,15 +8,13 @@
     jQuery(function($) {
       $('#title').typist({
         speed: speed_define,
-        text: 'Error 500'
+        text: 'Error 500',
+        cursor: false
       });
       $('#sub_title_error1').typist({
         speed: speed_define,
-        text: 'サーバ内で'
-      });
-      $('#sub_title_error2').typist({
-        speed: speed_define,
-        text: 'エラーが発生しました'
+        text: 'サーバ内エラーが発生しました',
+        cursor: false
       });
     });
     </script>
