400と403ページを修正

--- a/portfolio/templates/400.html
+++ b/portfolio/templates/400.html
@@ -12,11 +12,8 @@
       });
       $('#sub_title_error1').typist({
         speed: speed_define,
-        text: '要求の形式が'
-      });
-      $('#sub_title_error2').typist({
-        speed: speed_define,
-        text: '正しくありません'
+        text: '要求の形式が正しくありません',
+        cursor: false
       });
     });
     </script>
