--- a/portfolio/templates/403.html
+++ b/portfolio/templates/403.html
@@ -12,11 +12,8 @@
       });
       $('#sub_title_error1').typist({
         speed: speed_define,
-        text: 'ページへのアクセスは'
-      });
-      $('#sub_title_error2').typist({
-        speed: speed_define,
-        text: '許可されていません'
+        text: 'アクセスが拒否されました',
+        cursor: false
       });
     });
     </script>
