errorページを修正

--- a/portfolio/templates/400.html
+++ b/portfolio/templates/400.html
@@ -8,7 +8,8 @@
     jQuery(function($) {
       $('#title').typist({
         speed: speed_define,
-        text: 'Error 400'
+        text: 'Error Code 400',
+        cursor: false
       });
       $('#sub_title_error1').typist({
         speed: speed_define,
