--- a/portfolio/templates/403.html
+++ b/portfolio/templates/403.html
@@ -8,7 +8,8 @@
     jQuery(function($) {
       $('#title').typist({
         speed: speed_define,
-        text: 'Error 403'
+        text: 'Error Code 403',
+        cursor: false
       });
       $('#sub_title_error1').typist({
         speed: speed_define,
