--- a/portfolio/templates/500.html
+++ b/portfolio/templates/500.html
@@ -8,7 +8,7 @@
     jQuery(function($) {
       $('#title').typist({
         speed: speed_define,
-        text: 'Error 500',
+        text: 'Error Code 500',
         cursor: false
       });
       $('#sub_title_error1').typist({
