--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/swipebox.min.css' %}" />
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/style.css' %}" />
 
-  <title>Kenta Portfolio</title>
+  <title>KentaIwami Portfolio</title>
 
   <script src="{% static 'portfolio/js/jquery-3.1.1.min.js' %}"></script>
   <script src="{% static 'portfolio/js/jquery.typist.min.js' %}"></script>
