--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -154,7 +154,7 @@
 
 
         <div class="console_text_link">
-          <a class="link" href="{% url 'portfolio:photographer_all' %}">
+          <a class="link" href="{% url 'portfolio:all_photographer_works' %}">
             <div class="box">
               <div class="link_name">more</div>
               <div class="bd10 bd"><div class="bdT"></div><div class="bdB"></div><div class="bdR"></div><div class="bdL"></div></div>
