--- a/portfolio/templates/portfolio/engineer_work_detail.html
+++ b/portfolio/templates/portfolio/engineer_work_detail.html
@@ -61,7 +61,7 @@
     <div class="section_title" id="e_work_title"></div>
 
     <div class="console_area">
-      <div class="console_top">Show {{ engineer_product.engineer_product_alphabet_name }} process <span class="loading dots2"></span></div>
+      <div class="console_top">Show {{ engineer_product.engineer_product_alphabet_name }} process<span class="loading dots2"></span></div>
 
       <div class="console">
         <div class="console_name">{{ engineer_product.engineer_product_name }}</div>
@@ -136,7 +136,7 @@
     <div class="section_title" id="comment_title"></div>
     <div class="console_area">
       <div class="console_top">
-        Comment to {{ engineer_product.engineer_product_alphabet_name }} process <span class="loading dots2"></span>
+        Comment to {{ engineer_product.engineer_product_alphabet_name }} process<span class="loading dots2"></span>
       </div>
       <div class="console">
         <div class="console_text">Name</div>
@@ -171,11 +171,11 @@
   <section class="container" id="3">  <!--CommentView-->
     <div class="section_title" id="comment_view_title"></div>
     <div class="console_area">
-      <div class="console_top">Show comments to {{ engineer_product.engineer_product_alphabet_name }} process <span class="loading dots2"></span></div>
+      <div class="console_top">Show comments to {{ engineer_product.engineer_product_alphabet_name }} process<span class="loading dots2"></span></div>
         <div class="console">
 
           {% if comment_list.count == 0 %}
-          <div class="console_text">No comment to {{ engineer_product.engineer_product_alphabet_name }}</div>
+          <div class="console_text">No comments to {{ engineer_product.engineer_product_alphabet_name }}</div>
 
           {% else %}
           <div class="content">
