--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -21,7 +21,7 @@ a, a:focus, a:hover {
 
 @font-face {
   font-family: "MyFont";
-  src: url(font/SourceHanSans-Light.otf)
+  src: url(font/SourceHanSans-Normal.woff)
 }
 
 
