--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -186,7 +186,7 @@
         <div class="console_text">資格：応用情報技術者試験</div>
         <div class="console_text">趣味：コーディング, 写真撮影, ゲーム, 映画鑑賞</div>
         <div class="console_text"></div>
-        <div class="console_text">連絡先：b1013068@fun.ac.jp または iwami@pblsummit.jp</div>
+        <div class="console_text">連絡先：g2117009@fun.ac.jp または iwami@pblsummit.jp</div>
 
         <div class="row">
           <div class="col">
