リンクの更新

--- a/portfolio/templates/portfolio/engineer_work_detail.html
+++ b/portfolio/templates/portfolio/engineer_work_detail.html
@@ -71,18 +71,18 @@
         {% if engineer_product.col1_image != '' and engineer_product.col2_image != '' %}
         <div class="row">
           <div class="col">
-            <div class="console_image"><img class="img-fluid-no-border" src="/media/{{ engineer_product.col1_image }}"></div>
+            <div class="console_image"><img class="img-fluid-no-border" src="/portfolio/media/{{ engineer_product.col1_image }}"></div>
           </div>
 
           <div class="col">
-            <div class="console_image"><img class="img-fluid-no-border" src="/media/{{ engineer_product.col2_image }}"></div>
+            <div class="console_image"><img class="img-fluid-no-border" src="/portfolio/media/{{ engineer_product.col2_image }}"></div>
           </div>
         </div>
         {% endif %}
 
         {% if engineer_product.col3_image != '' %}
         <div class="container">
-          <div class="console_image"><img class="img-fluid-no-border" src="/media/{{ engineer_product.col3_image }}"></div>
+          <div class="console_image"><img class="img-fluid-no-border" src="/portfolio/media/{{ engineer_product.col3_image }}"></div>
         </div>
         {% endif %}
 
