all_photoとe_work_detailのタイトルを、読み込み完了後1秒してから実行するようにした

--- a/portfolio/templates/portfolio/all_photographer_works.html
+++ b/portfolio/templates/portfolio/all_photographer_works.html
@@ -19,11 +19,15 @@
 
   <script>
   var speed_define = 25;
-  jQuery(function($) {
+  var show_title = function() {
     $('#photographer_title').typist({
       speed: speed_define,
       text: 'All photographer works',
     });
+  };
+  
+  jQuery(function($) {
+    setTimeout(show_title, 1000);
   });
   </script>
 </head>
