--- a/portfolio/templates/portfolio/engineer_work_detail.html
+++ b/portfolio/templates/portfolio/engineer_work_detail.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
   {% load static %}
+  <!--OGP-->
+  <meta property="og:title" content="{{ engineer_product.engineer_product_name }}" />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="http://kentaiwami.jp/portfolio/{{ engineer_product.pk }}/" />
+  <meta property="og:image" content="http://kentaiwami.jp/portfolio/media/{{ engineer_product.top_image }}" />
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="{{ engineer_product.engineer_product_name }}">
+  <meta name="twitter:description" content="{{ engineer_product.engineer_product_name }}の詳細">
+  <meta name="twitter:image:src" content="http://kentaiwami.jp/portfolio/media/{{ engineer_product.top_image }}">
+
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/reset.css' %}" />
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/bootstrap.min.css' %}" />
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/spinners.min.css' %}" />
