--- a/portfolio/templates/portfolio/form_error.html
+++ b/portfolio/templates/portfolio/form_error.html
@@ -30,7 +30,7 @@
     <div class="section_title" id="comment_title"></div>
     <div class="console_area">
       <div class="console_top">
-        Comment to {{ engineer_product.engineer_product_alphabet_name }} process <span class="loading dots2"></span>
+        Comment to {{ engineer_product.engineer_product_alphabet_name }}<span class="loading dots2"></span>
       </div>
       <div class="console">
         <div class="console_text">Name</div>
