--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -143,7 +143,7 @@
     <div class="section_title" id="photographer_title"></div>
 
     <div class="console_area">
-      <div class="console_top">Show {{ photographer_product_list.count|add:"3" }} photographer works process<span class="loading dots2"></span></div>
+      <div class="console_top">Show {{ photographer_product_list.count|add:"3" }} photographer works<span class="loading dots2"></span></div>
 
       <div class="console">
         <div class="console_text">使用カメラはNikon5300。</div>
@@ -184,7 +184,7 @@
     <div class="section_title" id="profile_title"></div>
 
     <div class="console_area">
-      <div class="console_top">Show profile process <span class="loading dots2"></span></div>
+      <div class="console_top">Show profile<span class="loading dots2"></span></div>
 
       <div class="console">
         <div class="console_name">岩見建汰</div>
