--- a/portfolio/templates/portfolio/engineer_works_all.html
+++ b/portfolio/templates/portfolio/engineer_works_all.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/bootstrap.min.css' %}" />
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/style.css' %}" />
 
+  <!--favicon-->
+  <link rel="shortcut icon" type="image/png" href="{% static 'portfolio/img/favicon.ico' %}"/>
+
   <title>Engineer Works</title>
 
   <script type="text/javascript" src="{% static 'portfolio/js/jquery-3.1.1.min.js' %}"></script>
