--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -21,6 +21,9 @@
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/swipebox.min.css' %}" />
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/style.css' %}" />
 
+  <!--favicon-->
+  <link rel="shortcut icon" type="image/png" href="{% static 'portfolio/img/favicon.ico' %}"/>
+
   <title>KentaIwami Portfolio</title>
 
   <script src="{% static 'portfolio/js/jquery-3.1.1.min.js' %}"></script>
