--- a/portfolio/templates/portfolio/thanks.html
+++ b/portfolio/templates/portfolio/thanks.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/style.css' %}" />
   <script type="text/javascript" src="{% static 'portfolio/js/jquery-3.1.1.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'portfolio/js/jquery.typist.min.js' %}"></script>
+
+  <!--favicon-->
+  <link rel="shortcut icon" type="image/png" href="{% static 'portfolio/img/favicon.ico' %}"/>
   <title>Thanks!!</title>
 
   <script>
