--- a/portfolio/templates/portfolio/form_error.html
+++ b/portfolio/templates/portfolio/form_error.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/spinners.min.css' %}" />
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/style.css' %}" />
 
+  <!--favicon-->
+  <link rel="shortcut icon" type="image/png" href="{% static 'portfolio/img/favicon.ico' %}"/>
+
   <title>{{ engineer_product.engineer_product_name }}</title>
 
   <script type="text/javascript" src="{% static 'portfolio/js/jquery-3.1.1.min.js' %}"></script>
