--- a/portfolio/templates/portfolio/engineer_work_detail.html
+++ b/portfolio/templates/portfolio/engineer_work_detail.html
@@ -137,10 +137,10 @@
 
         <div class="row">
 
-          {% if engineer_product.link != '' %}
+          {% if engineer_product.github != '' %}
           <div class="col">
             <div class="console_text_link">
-              <a class="link" href="{{ engineer_product.link }}">
+              <a class="link" href="{{ engineer_product.github }}">
                 <div class="box">
                   <div class="link_name">GitHub</div>
                   <div class="bd10 bd"><div class="bdT"></div><div class="bdB"></div><div class="bdR"></div><div class="bdL"></div></div>
@@ -150,10 +150,10 @@
           </div>
           {% endif %}
 
-          {% if engineer_product.link != '' %}
+          {% if engineer_product.store != '' %}
           <div class="col">
             <div class="console_text_link">
-              <a class="link" href="{{ engineer_product.link }}">
+              <a class="link" href="{{ engineer_product.store }}">
                 <div class="box">
                   <div class="link_name">App Store</div>
                   <div class="bd10 bd"><div class="bdT"></div><div class="bdB"></div><div class="bdR"></div><div class="bdL"></div></div>
