--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -119,8 +119,8 @@
           <figure>
             <img src="/portfolio/media/{{ e_product.top_image }}" class="img-fluid" alt="">
             <figcaption>
-              <h3>{{ e_product.engineer_product_name }}</h3>
-              <p>{{ e_product.engineer_product_short_concept }}</p>
+              <h3>{{ e_product.name }}</h3>
+              <p>{{ e_product.short_concept }}</p>
             </figcaption>
           </figure>
         </a>
